plugins/kotlin/idea/tests/testData/checker/codeFragments/startingFromReturn.kt.fragment.k2
<error descr="[RETURN_NOT_ALLOWED] 'return' is prohibited here.">return</error> a